# ipmitui

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/ipmitui/: __init__.py  __main__.py  _tui.py
tests/: test_ipmitui.py
